--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "obsidian-auto-timelines",
+	"name": "Auto timelines",
+	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "This plugin aims to simplify creating and maintaining timelines in different a project",
+	"author": "April",
+	"authorUrl": "https://twitter.com/NowLWasTaken",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
