chore: update manifest

--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
 	"name": "Auto timelines",
 	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "This plugin aims to simplify creating and maintaining timelines in different a project",
+	"description": "This plugin aims to simplify creating and maintaining timelines",
 	"author": "April",
-	"authorUrl": "https://twitter.com/NowLWasTaken",
+	"authorUrl": "https://github.com/April-Gras",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
