--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
 	"name": "April's Automatic Timelines",
 	"version": "0.0.2",
 	"minAppVersion": "0.15.0",
-	"description": "This plugin aims to simplify creating and maintaining timelines",
-	"author": "April",
+	"description": "Simple timeline generator for story tellers",
+	"author": "April Gras",
 	"authorUrl": "https://github.com/April-Gras",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": true
