--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-auto-timelines",
+	"id": "aprils-automatic-timelines",
 	"name": "April's Automatic Timelines",
 	"version": "0.0.2",
 	"minAppVersion": "0.15.0",
