chore: removed founding url in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "Simple timeline generator for story tellers",
 	"author": "April Gras",
 	"authorUrl": "https://github.com/April-Gras",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"fundingUrl": "",
 	"isDesktopOnly": true
 }
