--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,11 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
+		"resolveJsonModule": true,
 		"paths": {
 			"~/*": ["./src/*"]
 		},
 		"lib": ["DOM", "ES5", "ES6", "ES7"]
 	},
-	"include": ["**/*.ts"]
+	"include": ["**/*.ts", "**/*.vue"]
 }
