--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "Simple timeline generator for story tellers",
 	"author": "April Gras",
 	"authorUrl": "https://github.com/April-Gras",
-	"isDesktopOnly": true
+	"isDesktopOnly": false
 }
