--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
 	"id": "aprils-automatic-timelines",
 	"name": "April's Automatic Timelines",
-	"version": "0.0.11",
+	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
 	"description": "Simple timeline generator for story tellers",
 	"author": "April Gras",
 	"authorUrl": "https://github.com/April-Gras",
-	"isDesktopOnly": true
+	"isDesktopOnly": false
 }
