--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.1.2",
+	"version": "0.2.0",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
 	"scripts": {
@@ -9,22 +9,22 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "5.59.6",
+		"@typescript-eslint/parser": "5.59.6",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "0.17.19",
 		"esbuild-plugin-vue3": "^0.3.2",
 		"obsidian": "latest",
 		"sass": "^1.62.1",
-		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"tslib": "2.5.0",
+		"typescript": "5.0.4"
 	},
 	"dependencies": {
-		"vue": "^3.2.47",
+		"vue": "^3.3.2",
 		"vue-i18n": "^9.2.2"
 	}
 }
