--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "vitest",
+		"test-ui": "vitest --ui --coverage",
+		"coverage": "vitest --coverage",
+		"prepare-vitest": "node prepare-vitest.mjs"
 	},
 	"keywords": [],
 	"author": "April",
@@ -15,13 +19,20 @@
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.59.6",
 		"@typescript-eslint/parser": "5.59.6",
+		"@vitejs/plugin-vue": "^4.2.3",
+		"@vitest/coverage-istanbul": "^0.31.1",
+		"@vitest/ui": "^0.31.1",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.19",
 		"esbuild-plugin-vue3": "^0.3.2",
+		"jsdom": "^22.0.0",
 		"obsidian": "latest",
 		"sass": "^1.62.1",
 		"tslib": "2.5.0",
-		"typescript": "5.0.4"
+		"typescript": "5.0.4",
+		"vite-tsconfig-paths": "^4.2.0",
+		"vitest": "^0.31.1",
+		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
 		"vue": "^3.3.2",
