--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
 		"paths": {
 			"~/*": ["./src/*"]
 		},
-		"lib": ["DOM", "ES5", "ES6", "ES7"]
+		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"types": ["vitest/globals"]
 	},
 	"include": ["**/*.ts", "**/*.vue"]
 }
