--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
 		"jsdom": "^22.0.0",
 		"obsidian": "latest",
 		"sass": "^1.62.1",
-		"tslib": "2.5.0",
+		"ts-essentials": "^9.3.2",
+		"tslib": "2.5.2",
 		"typescript": "5.0.4",
 		"vite-tsconfig-paths": "^4.2.0",
 		"vitest": "^0.31.1",
 		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
-		"vue": "^3.3.2",
+		"vue": "^3.3.4",
 		"vue-i18n": "^9.2.2"
 	}
 }
