--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ node_modules
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
 main.js
+# Style is now built from source
+styles.css
 
 # Exclude sourcemaps
 *.map
