--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.59.6",
-		"@typescript-eslint/parser": "5.59.6",
+		"@typescript-eslint/eslint-plugin": "5.59.9",
+		"@typescript-eslint/parser": "5.59.9",
 		"@vitejs/plugin-vue": "^4.2.3",
-		"@vitest/coverage-istanbul": "^0.31.1",
-		"@vitest/ui": "^0.31.1",
+		"@vitest/coverage-istanbul": "^0.32.0",
+		"@vitest/ui": "^0.32.0",
+		"@vue/test-utils": "^2.3.2",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.19",
 		"esbuild-plugin-vue3": "^0.3.2",
-		"jsdom": "^22.0.0",
+		"happy-dom": "^9.20.3",
 		"obsidian": "latest",
-		"sass": "^1.62.1",
+		"sass": "^1.63.3",
 		"ts-essentials": "^9.3.2",
-		"tslib": "2.5.2",
-		"typescript": "5.0.4",
+		"tslib": "2.5.3",
+		"typescript": "5.1.3",
 		"vite-tsconfig-paths": "^4.2.0",
-		"vitest": "^0.31.1",
+		"vitest": "^0.32.0",
 		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
