--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": ["./src/*"],
+			"@/*": ["./tests/*"]
 		},
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
 		"types": ["vitest/globals"]
