--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"test": "vitest",
+		"test-ui": "vitest --ui --coverage",
+		"coverage": "vitest --coverage",
+		"prepare-vitest": "node prepare-vitest.mjs"
 	},
 	"keywords": [],
 	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.59.6",
-		"@typescript-eslint/parser": "5.59.6",
+		"@typescript-eslint/eslint-plugin": "5.59.9",
+		"@typescript-eslint/parser": "5.59.9",
+		"@vitejs/plugin-vue": "^4.2.3",
+		"@vitest/coverage-istanbul": "^0.32.0",
+		"@vitest/ui": "^0.32.0",
+		"@vue/test-utils": "^2.3.2",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.19",
 		"esbuild-plugin-vue3": "^0.3.2",
+		"happy-dom": "^9.20.3",
 		"obsidian": "latest",
-		"sass": "^1.62.1",
-		"tslib": "2.5.0",
-		"typescript": "5.0.4"
+		"sass": "^1.63.3",
+		"ts-essentials": "^9.3.2",
+		"tslib": "2.5.3",
+		"typescript": "5.1.3",
+		"vite-tsconfig-paths": "^4.2.0",
+		"vitest": "^0.32.0",
+		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
-		"vue": "^3.3.2",
+		"vue": "^3.3.4",
 		"vue-i18n": "^9.2.2"
 	}
 }
