--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,13 @@
 		"isolatedModules": true,
 		"strictNullChecks": true,
 		"resolveJsonModule": true,
+		"allowSyntheticDefaultImports": true,
 		"paths": {
-			"~/*": ["./src/*"]
+			"~/*": ["./src/*"],
+			"@/*": ["./tests/*"]
 		},
-		"lib": ["DOM", "ES5", "ES6", "ES7"]
+		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"types": ["vitest/globals"]
 	},
 	"include": ["**/*.ts", "**/*.vue"]
 }
