--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"importHelpers": true,
 		"isolatedModules": true,
 		"strictNullChecks": true,
+		"downlevelIteration": true,
 		"resolveJsonModule": true,
 		"allowSyntheticDefaultImports": true,
 		"paths": {
