--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
+		"@testing-library/vue": "^7.0.0",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.60.1",
 		"@typescript-eslint/parser": "5.60.1",
