--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/lodash.clonedeep": "^4.5.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.61.0",
 		"@typescript-eslint/parser": "5.61.0",
@@ -37,6 +38,7 @@
 		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
+		"lodash.clonedeep": "^4.5.0",
 		"vue": "^3.3.4",
 		"vue-i18n": "^9.2.2"
 	}
