--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
 			"@/*": ["./tests/*"]
 		},
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
-		"types": ["vitest/globals"]
+		"types": ["vitest/globals", "@types/lodash.clonedeep"]
 	},
 	"include": ["**/*.ts", "**/*.vue"]
 }
