--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ node_modules
 main.js
 # Styles are now built from source
 styles.css
-main.css
+# root main.css will be kept to preserve build
 
 # Exclude sourcemaps
 *.map
