31 feature use hour and minutes in modern calendar (#44)
* chore: dependencies update

* chore: upgraded build chain

* chore: removed un-maintanable tests :<

sadly the setup ain't really vue test friendly, too bad

* feat: preped for the incomming date token upgrade

right now all systems are the same

* tests: tested new utils function

* chore: updated outdated variable naming and it's jsdoc

* feat: addded uncompleted step for date token configuration

* tests: more unit

* chore: packages updates

* chore: updated import after rebase

* feat: added crude control of default tokens

* feat: finalized the advanced token configuration and the re-sync method when changing tokens

* chore: added lodash.clonedeep

* chore: added lodash.clonedeep types

* feat: string date token handled

* chore: updated wording

* chore: package upgrade

* test: added test case for getNoteTags

* fix: type issues and unhandled module in the settings flow

* chore: removed generated file

* Update README.md

* chore: obsidian plugin version bump

* chore: removed one lodash.clonedeep too many

* chore: re-added lodash.clonedeep but as dev dependency

* chore: cleaner build, also left root main.css to not break fresh builds

---------

Co-authored-by: April <april@groover.co>

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,9 @@ node_modules
 # Don't include the compiled main.js file in the repo.
 # They should be uploaded to GitHub releases instead.
 main.js
-# Style is now built from source
+# Styles are now built from source
 styles.css
+# root main.css will be kept to preserve build
 
 # Exclude sourcemaps
 *.map
