--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.4.1",
+	"version": "0.5.0",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
 	"scripts": {
@@ -16,25 +16,26 @@
 	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
-		"@testing-library/vue": "^7.0.0",
+		"@types/lodash.clonedeep": "^4.5.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.61.0",
 		"@typescript-eslint/parser": "5.61.0",
 		"@vitejs/plugin-vue": "^4.2.3",
-		"@vitest/coverage-istanbul": "^0.32.4",
-		"@vitest/ui": "^0.32.4",
+		"@vitest/coverage-istanbul": "^0.33.0",
+		"@vitest/ui": "^0.33.0",
 		"@vue/test-utils": "^2.4.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.18.11",
 		"esbuild-plugin-vue3": "^0.3.2",
-		"happy-dom": "^9.20.3",
+		"happy-dom": "^10.0.3",
+		"lodash.clonedeep": "^4.5.0",
 		"obsidian": "latest",
 		"sass": "^1.63.6",
 		"ts-essentials": "^9.3.2",
 		"tslib": "2.6.0",
 		"typescript": "5.1.6",
 		"vite-tsconfig-paths": "^4.2.0",
-		"vitest": "^0.32.4",
+		"vitest": "^0.33.0",
 		"vitest-mock-extended": "^1.1.3"
 	},
 	"dependencies": {
