--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.7.2",
+	"version": "0.8.0",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
 	"scripts": {
@@ -18,30 +18,31 @@
 	"devDependencies": {
 		"@types/lodash.clonedeep": "^4.5.7",
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "6.1.0",
-		"@typescript-eslint/parser": "6.1.0",
+		"@typescript-eslint/eslint-plugin": "6.4.0",
+		"@typescript-eslint/parser": "6.4.0",
 		"@vitejs/plugin-vue": "^4.2.3",
-		"@vitest/coverage-istanbul": "^0.33.0",
-		"@vitest/ui": "^0.33.0",
-		"@vue/test-utils": "^2.4.0",
+		"@vitest/coverage-istanbul": "^0.34.1",
+		"@vitest/ui": "^0.34.1",
+		"@vue/test-utils": "^2.4.1",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.18.14",
+		"esbuild": "0.19.2",
 		"esbuild-plugin-vue3": "^0.3.2",
-		"eslint": "^8.45.0",
-		"eslint-plugin-jsdoc": "^46.4.4",
-		"happy-dom": "^10.5.2",
+		"eslint": "^8.47.0",
+		"eslint-plugin-jsdoc": "^46.4.6",
+		"happy-dom": "^10.10.0",
 		"lodash.clonedeep": "^4.5.0",
 		"obsidian": "latest",
-		"sass": "^1.63.6",
+		"sass": "^1.65.1",
 		"ts-essentials": "^9.3.2",
-		"tslib": "2.6.0",
+		"tslib": "2.6.1",
 		"typescript": "5.1.6",
 		"vite-tsconfig-paths": "^4.2.0",
-		"vitest": "^0.33.0",
-		"vitest-mock-extended": "^1.1.4"
+		"vitest": "^0.34.1",
+		"vitest-mock-extended": "^1.2.0"
 	},
 	"dependencies": {
 		"vue": "^3.3.4",
+		"vue-collapsed": "^1.2.6",
 		"vue-i18n": "^9.2.2",
 		"yaml": "^2.3.1"
 	}
