--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.11.1",
+	"version": "0.12.0",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
+	"type": "module",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
@@ -16,34 +17,34 @@
 	"author": "April",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/lodash.clonedeep": "^4.5.8",
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "6.9.1",
-		"@typescript-eslint/parser": "6.9.1",
-		"@vitejs/plugin-vue": "^4.4.0",
-		"@vitest/coverage-istanbul": "^0.34.6",
-		"@vitest/ui": "^0.34.6",
-		"@vue/test-utils": "^2.4.1",
+		"@types/lodash.clonedeep": "^4.5.9",
+		"@types/node": "^18.19.3",
+		"@typescript-eslint/eslint-plugin": "6.16.0",
+		"@typescript-eslint/parser": "6.16.0",
+		"@vitejs/plugin-vue": "^5.0.0",
+		"@vitest/coverage-istanbul": "^1.1.0",
+		"@vitest/ui": "^1.1.0",
+		"@vue/test-utils": "^2.4.3",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.19.5",
-		"esbuild-plugin-vue3": "^0.3.2",
-		"eslint": "^8.53.0",
-		"eslint-plugin-jsdoc": "^46.8.2",
+		"esbuild": "0.19.10",
+		"esbuild-plugin-vue3": "^0.4.0",
+		"eslint": "^8.56.0",
+		"eslint-plugin-jsdoc": "^46.9.1",
 		"happy-dom": "^12.10.3",
 		"lodash.clonedeep": "^4.5.0",
 		"obsidian": "1.4.11",
-		"sass": "^1.69.5",
+		"sass": "^1.69.6",
 		"ts-essentials": "^9.4.1",
 		"tslib": "2.6.2",
-		"typescript": "5.2.2",
-		"vite-tsconfig-paths": "^4.2.1",
-		"vitest": "^0.34.6",
+		"typescript": "5.3.3",
+		"vite-tsconfig-paths": "^4.2.3",
+		"vitest": "^1.1.0",
 		"vitest-mock-extended": "^1.3.1"
 	},
 	"dependencies": {
-		"vue": "^3.3.7",
-		"vue-collapsed": "^1.2.9",
-		"vue-i18n": "^9.6.5",
+		"vue": "^3.4.0",
+		"vue-collapsed": "^1.3.0",
+		"vue-i18n": "^9.8.0",
 		"yaml": "^2.3.4"
 	}
 }
