--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "obsidian-auto-timelines",
-	"version": "0.12.1",
+	"version": "0.12.2",
 	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
 	"main": "main.js",
 	"type": "module",
@@ -19,30 +19,30 @@
 	"devDependencies": {
 		"@types/lodash.clonedeep": "^4.5.9",
 		"@types/node": "^18.19.3",
-		"@typescript-eslint/eslint-plugin": "6.16.0",
-		"@typescript-eslint/parser": "6.16.0",
-		"@vitejs/plugin-vue": "^5.0.1",
-		"@vitest/coverage-istanbul": "^1.1.0",
-		"@vitest/ui": "^1.1.0",
+		"@typescript-eslint/eslint-plugin": "6.17.0",
+		"@typescript-eslint/parser": "6.17.0",
+		"@vitejs/plugin-vue": "^5.0.2",
+		"@vitest/ui": "^1.1.1",
 		"@vue/test-utils": "^2.4.3",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.19.10",
+		"esbuild": "0.19.11",
 		"esbuild-plugin-vue3": "^0.4.0",
 		"eslint": "^8.56.0",
-		"eslint-plugin-jsdoc": "^46.9.1",
+		"eslint-plugin-jsdoc": "^48.0.2",
 		"happy-dom": "^12.10.3",
 		"lodash.clonedeep": "^4.5.0",
 		"obsidian": "1.4.11",
-		"sass": "^1.69.6",
+		"sass": "^1.69.7",
 		"ts-essentials": "^9.4.1",
 		"tslib": "2.6.2",
 		"typescript": "5.3.3",
 		"vite-tsconfig-paths": "^4.2.3",
-		"vitest": "^1.1.0",
+		"vitest": "^1.1.1",
 		"vitest-mock-extended": "^1.3.1"
 	},
 	"dependencies": {
-		"vue": "^3.4.0",
+		"@vitest/coverage-v8": "^1.1.1",
+		"vue": "^3.4.3",
 		"vue-collapsed": "^1.3.0",
 		"vue-i18n": "^9.8.0",
 		"yaml": "^2.3.4"
