--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
 	"devDependencies": {
 		"@types/lodash.clonedeep": "^4.5.9",
 		"@types/lodash.isequal": "^4.5.8",
-		"@types/node": "^18.19.3",
-		"@typescript-eslint/eslint-plugin": "6.19.1",
-		"@typescript-eslint/parser": "6.19.1",
+		"@types/node": "^18.19.31",
+		"@typescript-eslint/eslint-plugin": "7.8.0",
+		"@typescript-eslint/parser": "7.8.0",
 		"@vitejs/plugin-vue": "^5.0.4",
-		"@vitest/ui": "^1.3.1",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.20.1",
+		"@vitest/ui": "^1.6.0",
+		"builtin-modules": "4.0.0",
+		"esbuild": "0.20.2",
 		"esbuild-plugin-vue3": "^0.4.2",
-		"eslint": "^8.56.0",
-		"eslint-plugin-jsdoc": "^48.1.0",
-		"happy-dom": "^13.3.8",
+		"eslint": "^8.57.0",
+		"eslint-plugin-jsdoc": "^48.2.3",
+		"happy-dom": "^14.7.1",
 		"lodash.clonedeep": "^4.5.0",
-		"obsidian": "1.4.11",
-		"sass": "^1.71.0",
-		"ts-essentials": "^9.4.1",
+		"obsidian": "1.5.7-1",
+		"sass": "^1.76.0",
+		"ts-essentials": "^10.0.0",
 		"tslib": "2.6.2",
-		"typescript": "5.3.3",
-		"vite-tsconfig-paths": "^4.3.1",
-		"vitest": "^1.3.1",
+		"typescript": "5.4.5",
+		"vite-tsconfig-paths": "^4.3.2",
+		"vitest": "^1.6.0",
 		"vitest-mock-extended": "^1.3.1"
 	},
 	"dependencies": {
-		"@vitest/coverage-v8": "^1.3.1",
+		"@vitest/coverage-v8": "^1.6.0",
 		"lodash.isequal": "^4.5.0",
-		"vue": "^3.4.19",
-		"vue-collapsed": "^1.3.0",
+		"vue": "^3.4.26",
+		"vue-collapsed": "^1.3.3",
 		"vue-feather": "^2.0.0",
-		"vue-i18n": "^9.9.1",
-		"yaml": "^2.3.4"
+		"vue-i18n": "^9.13.1",
+		"yaml": "^2.4.2"
 	}
 }
