--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
 		"inlineSourceMap": true,
 		"inlineSources": true,
 		"module": "ESNext",
+		"target": "ESNext",
 		"allowJs": true,
 		"noImplicitAny": true,
 		"moduleResolution": "node",
