--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-	"name": "obsidian-auto-timelines",
-	"version": "0.13.7",
-	"description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
-	"main": "main.js",
-	"type": "module",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"test": "vitest",
-		"test-ui": "vitest --ui --coverage",
-		"coverage": "vitest --coverage",
-		"prepare-vitest": "node prepare-vitest.mjs"
-	},
-	"keywords": [],
-	"author": "April",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/lodash.clonedeep": "^4.5.9",
-		"@types/lodash.isequal": "^4.5.8",
-		"@types/node": "^18.19.67",
-		"@typescript-eslint/eslint-plugin": "8.3.0",
-		"@typescript-eslint/parser": "8.14.0",
-		"@vitejs/plugin-vue": "^5.1.2",
-		"@vitest/ui": "^2.1.5",
-		"builtin-modules": "4.0.0",
-		"esbuild": "0.24.0",
-		"esbuild-plugin-vue3": "^0.4.2",
-		"eslint": "^8.57.1",
-		"eslint-plugin-jsdoc": "^50.5.0",
-		"happy-dom": "^15.11.6",
-		"lodash.clonedeep": "^4.5.0",
-		"obsidian": "1.7.2",
-		"sass": "~1.77.8",
-		"ts-essentials": "^10.0.3",
-		"tslib": "2.8.1",
-		"typescript": "5.6.3",
-		"vite-tsconfig-paths": "^5.1.2",
-		"vitest": "^2.1.5",
-		"vitest-mock-extended": "^2.0.2"
-	},
-	"dependencies": {
-		"@vitest/coverage-v8": "^2.1.5",
-		"lodash.isequal": "^4.5.0",
-		"vue": "3.5.11",
-		"vue-collapsed": "^1.3.4",
-		"vue-feather": "^2.0.0",
-		"vue-i18n": "^9.14.1",
-		"yaml": "^2.6.0"
-	}
+  "name": "obsidian-auto-timelines",
+  "version": "0.13.7",
+  "description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
+  "main": "main.js",
+  "type": "module",
+  "scripts": {
+    "build": "vite build",
+    "coverage": "vitest --coverage",
+    "dev": "vite build --watch --mode=development",
+    "prepare-vitest": "node prepare-vitest.mjs",
+    "test": "vitest",
+    "test-ui": "vitest --ui --coverage",
+    "version": "node version-bump.mjs && git add manifest.json versions.json"
+  },
+  "keywords": [],
+  "author": "April",
+  "license": "MIT",
+  "devDependencies": {
+    "@eslint/js": "^9.38.0",
+    "@types/lodash.clonedeep": "^4.5.9",
+    "@types/node": "^22.9.4",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/ui": "^4.0.5",
+    "builtin-modules": "5.0.0",
+    "eslint": "^9.38.0",
+    "eslint-plugin-jsdoc": "^61.1.11",
+    "eslint-plugin-tsdoc": "^0.4.0",
+    "happy-dom": "^18.0.1",
+    "jiti": "^2.6.1",
+    "lodash.clonedeep": "^4.5.0",
+    "obsidian": "1.10.2-1",
+    "prettier": "3.6.2",
+    "sass": "~1.89.2",
+    "ts-essentials": "^10.0.3",
+    "tslib": "2.8.1",
+    "typescript": "5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-tsconfig-paths": "^5.1.2",
+    "vitest": "^4.0.5",
+    "vitest-mock-extended": "^3.1.0"
+  },
+  "dependencies": {
+    "@vitest/coverage-v8": "^4.0.5",
+    "vue": "3.5.22",
+    "vue-collapsed": "^1.3.4",
+    "vue-feather": "^2.0.0",
+    "vue-i18n": "^11.1.12",
+    "yaml": "^2.8.1"
+  }
 }
