--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,25 @@
 {
-	"compilerOptions": {
-		"baseUrl": ".",
-		"inlineSourceMap": true,
-		"inlineSources": true,
-		"module": "ESNext",
-		"target": "ESNext",
-		"allowJs": true,
-		"noImplicitAny": true,
-		"moduleResolution": "node",
-		"importHelpers": true,
-		"isolatedModules": true,
-		"strictNullChecks": true,
-		"downlevelIteration": true,
-		"resolveJsonModule": true,
-		"allowSyntheticDefaultImports": true,
-		"paths": {
-			"~/*": ["./src/*"],
-			"@/*": ["./tests/*"]
-		},
-		"lib": ["DOM", "ES5", "ES6", "ES7"],
-		"types": [
-			"vitest/globals",
-			"@types/lodash.clonedeep",
-			"@types/lodash.isequal"
-		]
-	},
-	"include": ["**/*.ts", "**/*.vue"]
+  "compilerOptions": {
+    "baseUrl": ".",
+    "inlineSourceMap": true,
+    "inlineSources": true,
+    "module": "ESNext",
+    "target": "ESNext",
+    "allowJs": true,
+    "noImplicitAny": true,
+    "moduleResolution": "bundler",
+    "importHelpers": true,
+    "isolatedModules": true,
+    "strictNullChecks": true,
+    "downlevelIteration": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "paths": {
+      "~/*": ["./src/*"],
+      "@/*": ["./tests/*"]
+    },
+    "lib": ["DOM", "ESNext"],
+    "types": ["vitest/globals", "@types/lodash.clonedeep"]
+  },
+  "include": ["**/*.ts", "**/*.vue"]
 }
