--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -28,10 +28,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        run: npm install --global corepack@latest && corepack enable pnpm
+
       - name: Install dependencies
-        run: npm ci
+        run: pnpm i
 
       - name: Run ESLint
-        run: npx eslint .
-          --config .eslintrc
-          --ext .js,.jsx,.ts,.tsx
+        run: pnpm eslint .
