--- a/.github/workflows/tsc.yml
+++ b/.github/workflows/tsc.yml
@@ -1,13 +1,4 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# ESLint is a tool for identifying and reporting on patterns
-# found in ECMAScript/JavaScript code.
-# More details at https://github.com/eslint/eslint
-# and https://eslint.org
-
-name: ESLint
+name: TSC Checks
 
 on:
   push:
@@ -18,11 +9,10 @@ on:
 
 jobs:
   eslint:
-    name: Run eslint scanning
+    name: Run tsc scanning
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      security-events: write
       actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - name: Checkout code
@@ -34,5 +24,5 @@ jobs:
       - name: Install dependencies
         run: pnpm i
 
-      - name: Run ESLint
-        run: pnpm eslint .
+      - name: Run TSC
+        run: pnpm tsc --noEmit --pretty --skipLibCheck
