--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-auto-timelines",
-  "version": "0.13.8",
+  "version": "0.13.9",
   "description": "This Obsidian (https://obsidian.md) plugin aims to simplify creating and maintaining timelines in different a project",
   "main": "main.js",
   "type": "module",
@@ -17,33 +17,33 @@
   "author": "April",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/js": "^9.38.0",
+    "@eslint/js": "^9.39.1",
     "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^22.9.4",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitest/ui": "^4.0.5",
+    "@vitejs/plugin-vue": "^6.0.2",
+    "@vitest/ui": "^4.0.10",
     "builtin-modules": "5.0.0",
-    "eslint": "^9.38.0",
-    "eslint-plugin-jsdoc": "^61.1.11",
-    "eslint-plugin-tsdoc": "^0.4.0",
+    "eslint": "^9.39.1",
+    "eslint-plugin-jsdoc": "^61.2.1",
+    "eslint-plugin-tsdoc": "^0.5.0",
     "happy-dom": "^18.0.1",
     "jiti": "^2.6.1",
     "lodash.clonedeep": "^4.5.0",
-    "obsidian": "1.10.2-1",
+    "obsidian": "1.10.3",
     "prettier": "3.6.2",
-    "sass": "~1.89.2",
+    "sass": "~1.94.1",
     "ts-essentials": "^10.0.3",
     "tslib": "2.8.1",
     "typescript": "5.9.3",
-    "typescript-eslint": "^8.46.2",
+    "typescript-eslint": "^8.47.0",
     "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "^5.1.2",
-    "vitest": "^4.0.5",
+    "vitest": "^4.0.10",
     "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
-    "@vitest/coverage-v8": "^4.0.5",
-    "vue": "3.5.22",
+    "@vitest/coverage-v8": "^4.0.10",
+    "vue": "3.5.24",
     "vue-collapsed": "^1.3.4",
     "vue-feather": "^2.0.0",
     "vue-i18n": "^11.1.12",
